--- a/css-menu-tab/tabSwitcher.css
+++ b/css-menu-tab/tabSwitcher.css
@@ -1,6 +1,6 @@
 ﻿#superHeroTabs
 {
-    padding:0 10px !important;
+    padding:0 15px !important;
 }
 .tabsMainContainer {
     line-height: 15px;
@@ -70,108 +70,138 @@
         padding-top: 2%;
     }
 }
-@media screen and (max-width: 699px){
+@media screen and (max-width:991px){
     .tabListContainer li
     {
         padding-left: 5%;
     }
 }
-@media screen and (max-width: 639px){
+/*@media screen and (max-width: 699px){*/
+/*    .tabListContainer li*/
+/*    {*/
+/*        padding-left: 5%;*/
+/*    }*/
+/*}*/
+@media screen and (max-width: 688px){
     .tabListContainer li
     {
-        padding-left: 4%;
+        padding-left: 3%;
     }
 }
+@media screen and (max-width: 635px){
+    .tabListContainer li
+    {
+        padding-left: 3%;
+    }
+}
+/*@media screen and (max-width: 639px){*/
+/*    .tabListContainer li*/
+/*    {*/
+/*        padding-left: 4%;*/
+/*    }*/
+/*}*/
+
 @media screen and (max-width: 600px) {
     .tabListContainer {
-        position: absolute;
-        left: 0;
-        margin: 0;
-        width: 100%;
-        padding: 0;
-        cursor: pointer;
-        list-style-position: inside;
-        z-index: 12;
-        background-color:#004751;
-        margin-top: 2%;
-    }
-
-    .tabList {
-        color: #333333;
         display: flex;
-        align-items: center;
-        height: 30px;
-        padding: 0 10px 0 10px;
-        font-size: 100%;
-        margin: 0;
-        list-style-type: none;
-        line-height: 30px;
-    }
-
-    .selectedTab {
-        background-color: #1971a7 !important;
-        border: thin #1971a7 solid !important;
-        color: #ffffff;
-    }
-
-    .tabList:hover {
-        background-color: #eee;
-    }
-
-    .tabInput {
-        display: inline-block;
-        cursor: pointer;
-        color: #333333;
-        font-size: 100%;
-        width:100%;
-        border: none;
-        padding-left: 10px;
-        outline: none;
-        border:1px solid black;
-        font-weight: bold;
-    }
-
-    .tabDropdownImage {
-        display: inline-block;
-        cursor: pointer;
-        vertical-align: middle;
-        width: 10px;
-        position: absolute;
-        right: 0;
-        margin-top: 6px;
-        margin-right: 15px;
-    }
-
-    .toggleTabsCollapsed {
-        display: none;
-    }
-
-    .toggleTabsExpanded {
-        display: inline;
-        width: 94%;
-        margin-left: 3%;
-    }
-
-    .tabNotch {
-        display: none !important;
-    }
-
-    .tabsMainContainer {
-        border: none;
-    }
-
-    .tabInputBox {
-        width: 100%;
-        border: 1px #e5e5e5 solid;
-        height: 26px;
-        vertical-align: middle;
-        padding-top: 4px;
-    }
-
-    .tabListContainer li {
-        display: block;
-        width: 100%;
-        margin: 0;
-        padding: 0;
+        overflow: auto;
+        overflow-y: scroll;
     }
 }
+
+
+
+
+/*@media screen and (max-width: 600px) {*/
+/*    .tabListContainer {*/
+/*        position: absolute;*/
+/*        left: 0;*/
+/*        margin: 0;*/
+/*        width: 100%;*/
+/*        padding: 0;*/
+/*        cursor: pointer;*/
+/*        list-style-position: inside;*/
+/*        z-index: 12;*/
+/*        background-color:#004751;*/
+/*        margin-top: 2%;*/
+/*    }*/
+
+/*    .tabList {*/
+/*        color: #333333;*/
+/*        display: flex;*/
+/*        align-items: center;*/
+/*        height: 30px;*/
+/*        padding: 0 10px 0 10px;*/
+/*        font-size: 100%;*/
+/*        margin: 0;*/
+/*        list-style-type: none;*/
+/*        line-height: 30px;*/
+/*    }*/
+
+/*    .selectedTab {*/
+/*        background-color: #1971a7 !important;*/
+/*        border: thin #1971a7 solid !important;*/
+/*        color: #ffffff;*/
+/*    }*/
+
+/*    .tabList:hover {*/
+/*        background-color: #eee;*/
+/*    }*/
+
+/*    .tabInput {*/
+/*        display: inline-block;*/
+/*        cursor: pointer;*/
+/*        color: #333333;*/
+/*        font-size: 100%;*/
+/*        width:100%;*/
+/*        border: none;*/
+/*        padding-left: 10px;*/
+/*        outline: none;*/
+/*        border:1px solid black;*/
+/*        font-weight: bold;*/
+/*    }*/
+
+/*    .tabDropdownImage {*/
+/*        display: inline-block;*/
+/*        cursor: pointer;*/
+/*        vertical-align: middle;*/
+/*        width: 10px;*/
+/*        position: absolute;*/
+/*        right: 0;*/
+/*        margin-top: 6px;*/
+/*        margin-right: 22px;*/
+/*    }*/
+
+/*    .toggleTabsCollapsed {*/
+/*        display: none;*/
+/*    }*/
+
+/*    .toggleTabsExpanded {*/
+/*        display: inline;*/
+/*        width: 92%;*/
+/*        margin-left: 4%;*/
+/*    }*/
+
+/*    .tabNotch {*/
+/*        display: none !important;*/
+/*    }*/
+
+/*    .tabsMainContainer {*/
+/*        border: none;*/
+/*    }*/
+
+/*    .tabInputBox {*/
+/*        width: 100%;*/
+/*        border: 1px #e5e5e5 solid;*/
+/*        height: 26px;*/
+/*        vertical-align: middle;*/
+/*        padding-top: 4px;*/
+/*    }*/
+
+/*    .tabListContainer li {*/
+/*        display: block;*/
+/*        width: 100%;*/
+/*        margin: 0;*/
+/*        padding: 0;*/
+/*    }*/
+/*}*/
