--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,7 +20,7 @@ body
 	.img-content
 	{
 		img {
-			max-width: 250px;
+			max-width: 180px;
 		}
 	}
 	.lich-thi-dau
@@ -49,7 +49,7 @@ body
 			margin-top: 10px;
 			text-align: center;
 			border-left: 2px solid #ccc;
-			padding-left: 4%;
+			width: 100% !important;
 
 			.button-chi-tiet
 			{
@@ -1107,6 +1107,14 @@ footer
 }
 
 @media only screen and (max-width: 767px){
+	.bt1
+	{
+		margin: 0px auto;
+	}
+	.bt2
+	{
+		margin: 0px auto;
+	}
 	.big
 	{
 		text-align: center !important;
@@ -1118,7 +1126,14 @@ footer
 
 	.cont-all
 	{
-		padding-left: 30%;
+		.cont-1
+		{
+			margin: 0px auto;
+		}
+		.cont-2
+		{
+			margin: 0px auto;
+		}
 	}
 	.all-ct-button
 	{
@@ -1127,7 +1142,6 @@ footer
 		border: none !important;
 		width: 50%;
 		margin: 0px auto;
-		padding-left: 13%;
 		.button-text
 		{
 			margin-right: 60px;
@@ -1423,16 +1437,9 @@ footer
 		padding: 0 2.7%;
 	}
 
-	.cont-all
-	{
-		padding-left: 25%;
-	}
+
 }
 @media only screen and (max-width: 499px){
-	.cont-all
-	{
-		padding-left: 20%;
-	}
 	.all-box .tournaments .tournaments-system 
 	{
 		height: 260px;
@@ -1461,11 +1468,7 @@ footer
 	.all-ct-button
 	{
 		width: 100%;
-		padding-left:17% !important;
-		.button-chi-tiet
-		{
-			margin-right: 12%;
-		}
+
 	}
 
 
@@ -1512,20 +1515,20 @@ footer
 
 }
 @media screen and (max-width: 414px) {
-	.all-ct-button
-	{
-		padding-left: 15% !important;
-
-	}
+	//.all-ct-button
+	//{
+	//	padding-left: 15% !important;
+	//
+	//}
 
 }
 
 @media screen and (max-width: 411px) {
-	.all-ct-button
-	{
-		padding-left: 14% !important;
-
-	}
+	//.all-ct-button
+	//{
+	//	padding-left: 14% !important;
+	//
+	//}
 
 }
 @media screen and (max-width: 400px){
@@ -1617,15 +1620,6 @@ footer
 	.all-box .am
 	{
 		width: 95%;
-	}
-	.all-ct-button
-	{
-		width: 89%;
-		margin-left: 10%;
-		//.button-chi-tiet
-		//{
-		//	margin-right: 9%;
-		//}
 	}
 }
 @media only screen and (max-width: 320px){
